samples/_failures_safe/1761477079_f597e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91cc5268.c: In function ‘main’:
./samples/SAFE/__tmp_91cc5268.c:158:9: error: expected declaration or statement at end of input
  158 |         printf("Failed to create matrix B\n");
      |         ^~~~~~
./samples/SAFE/__tmp_91cc5268.c:158:9: error: expected declaration or statement at end of input
